2005-07-03  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        * khtml/xml/dom_docimpl.cpp: 
        (DocumentImpl::setDocumentChanged): fixed to use new API
        * kwq/KWQKStaticDeleter.h: 
        (KStaticDeleter::setObject): fixed to take 3rd argument
        http://bugzilla.opendarwin.org/show_bug.cgi?id=3823

2005-07-03  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        * kwq/KWQValueList.h:
        (QValueList::find): KDOM support
        (QValueList::constBegin): KDE compatibility
        (QValueList::constEnd): KDE compatibility
        * kwq/KWQValueListImpl.h:
        * kwq/KWQValueListImpl.mm:
        (KWQValueListImpl::findEqualNode): KDOM support
        http://bugzilla.opendarwin.org/show_bug.cgi?id=3832

2005-07-03  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        * kwq/KWQFontMetrics.h:
        * kwq/KWQFontMetrics.mm:
        (QFontMetrics::boundingRect): added boundingRect(QChar)
        http://bugzilla.opendarwin.org/show_bug.cgi?id=3827
  
2005-07-03  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        * kwq/KWQListImpl.h:
        * kwq/KWQListImpl.mm:
        (KWQListImpl::findRef): Added to support 
        KDOM::NodeImpl::compareDocumentPosition(NodeImpl *other)
  
2005-07-03  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        * ForwardingHeaders/qintdict.h: maps to KWQIntDict.h
        * kwq/KWQIntDict.h: copy of KWQPtrDict.h replacing T * with int.

2005-07-03  Eric Seidel  <eseidel@apple.com>

        * kwq/KWQPair.h: added newline, per mjs's request.

2005-07-03  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        * ForwardingHeaders/qpair.h: Added.
        * kwq/KWQPair.h: Added.
	Qt compatible QPair, built on std::pair
	http://bugzilla.opendarwin.org/show_bug.cgi?id=3824

2005-07-01  Beth Dakin  <bdakin@apple.com>

        Adding createCaption test for HTMLTableElement.

        Reviewed by Adele (sort of).
